--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://agtsk.github.io/codesapisk/codes.json">
+    <meta http-equiv="refresh" content="0; url=https://aglsk.github.io/codesapisk/codes.json">
     <title>Redirecionamento</title>
 </head>
 <body>
-    <p>Redirecionando para <a href="https://agtsk.github.io/codesapisk/codes.json">https://agtsk.github.io/codesapisk/codes.json</a></p>
+    <p>Redirecionando para <a href="https://aglsk.github.io/codesapisk/codes.json">https://aglsk.github.io/codesapisk/codes.json</a></p>
 </body>
 </html>
